# jaxipm

./: .gitignore  README.md  pyproject.toml
jaxipm/: barrier.py  inertia_correction.py  initialization.py  params.json  quantities.py  search.py  solver.py  structures.py
jaxipm/utils/: eqx_utils.py  problem_format_utils.py  sparse_utils.py  validation_utils.py
tests/: quad_casadi_dynamics.py  quad_examodels_dynamics.jl  quad_jax_dynamics.py  quad_params.json  run_all_tests.sh
tests/correctness/: analyze_results.py  ipopt_correctness.py  jaxipm_correctness.py
tests/quad_multi_swap/: analyze_results.py  ipopt_multi_swap.py  jaxipm_multi_swap.py  madnlp_multi_swap.jl  test_params.json
tests/quad_nav_circle/: analyze_results.py  ipopt_quad_nav.py  jaxipm_quad_nav.py  madnlp_quad.jl  test_params.json
tests/quad_track_avoid/: analyze_results.py  initialization.py  ipopt_track_avoid.py  jaxipm_track_avoid.py  madnlp_track_avoid.jl  test_params.json
